# forecasting_epidemics

./: .gitignore  1960-1969.csv  1970-1979.csv  2010-2019.csv  first_approach.ipynb  homework.ipynb  main.py  narr.md  pipeline.ipynb  pipeline_full.ipynb  pyproject.toml
data/: don.csv  emdat_target_variable.xlsx  epidemy.csv  epidemy_target.csv  incidence_predictions.csv  onset_predictions.csv  text.csv
data/health_world_bank/: 1980-1989.csv  1990-1999.csv  2000-2009.csv  2020-2023.csv  2024.csv
